<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res/enn.view"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/primary_background_color"
        >

    <org.eazegraph.lib.charts.PieChart
            android:layout_margin="15dp"
            android:id="@+id/piechart"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            app:egLegendTextSize="18sp"
            app:egUsePieRotation="true"
            app:egValueTextSize="36sp"
            app:egUpperLabelTextSize="22sp"
            app:egLowerLabelTextSize="16sp"
            app:egAutoCenter="false"
            app:egOpenClockwise="false"
            app:egInnerValueUnit="%"
            app:egInnerPadding="95"
            app:egValueTextColor="#ff2c98d4"
            app:egDividerLineColor="#949494"
            app:egLabelTextColor="#7B7B81"
            android:background="@android:color/transparent"
            app:egUseCustomInnerValue="true"
            android:layout_weight="2"
            />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_marginTop="-60dp">

        <LinearLayout
                style="@style/wrap_content_layout"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:layout_weight="1">

            <ImageView
                    android:src="@drawable/gas"
                    style="@style/wrap_content_layout"/>

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                <TextView
                        android:id="@+id/home_fragment_gas_usage"
                        android:text="39"
                        style="@style/yellow_large_text"/>

                <TextView
                        android:text="@string/gas_unit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                <TextView
                        android:id="@+id/home_fragment_gas_money"
                        android:text="25.00"
                        style="@style/yellow_small_text"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/money_unit"
                        />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:layout_weight="1">

            <ImageView
                    android:src="@drawable/electricity"
                    style="@style/wrap_content_layout"/>

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                <TextView
                        android:id="@+id/home_fragment_electricity_usage"
                        android:text="216"
                        style="@style/blue_large_text"/>

                <TextView
                        android:text="@string/electricity_unit"
                        style="@style/wrap_content_layout"/>
            </LinearLayout>

            <LinearLayout
                    android:orientation="horizontal"
                    style="@style/wrap_content_layout">

                <TextView
                        android:id="@+id/home_fragment_electricity_money"
                        android:text="120.00"
                        style="@style/blue_small_text"/>

                <TextView
                        style="@style/wrap_content_layout"
                        android:text="@string/money_unit"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:layout_weight="1">

            <ImageView
                    android:src="@drawable/heat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <LinearLayout
                    android:orientation="horizontal"
                    style="@style/wrap_content_layout">

                <TextView
                        android:id="@+id/home_fragment_heat_usage"
                        android:text="216"
                        style="@style/red_large_text"/>

                <TextView
                        android:text="@string/heat_unit"
                        style="@style/wrap_content_layout"/>
            </LinearLayout>

            <LinearLayout
                    android:orientation="horizontal"
                    style="@style/wrap_content_layout">

                <TextView
                        android:id="@+id/home_fragment_heat_money"
                        android:text="78.00"
                        style="@style/red_small_text"/>

                <TextView
                        style="@style/wrap_content_layout"
                        android:text="@string/money_unit"
                        />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
                style="@style/wrap_content_layout"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:layout_weight="1">

            <ImageView
                    android:src="@drawable/water"
                    style="@style/wrap_content_layout"/>

            <LinearLayout
                    android:orientation="horizontal"
                    style="@style/wrap_content_layout">

                <TextView
                        android:id="@+id/home_fragment_water_usage"
                        android:text="20"
                        style="@style/green_large_text"/>

                <TextView
                        android:text="@string/water_unit"
                        style="@style/wrap_content_layout"/>
            </LinearLayout>

            <LinearLayout
                    android:orientation="horizontal"
                    style="@style/wrap_content_layout">

                <TextView
                        android:id="@+id/home_fragment_water_money"
                        android:text="36.00"
                        style="@style/green_small_text"/>

                <TextView
                        style="@style/wrap_content_layout"
                        android:text="@string/water_unit"
                        />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:gravity="center_horizontal">

        <LinearLayout
                style="@style/wrap_content_layout"
                android:orientation="vertical"
                android:layout_gravity="center_vertical"
                android:gravity="center|right">

            <TextView
                    android:id="@+id/home_fragment_date_day"
                    android:text="30"
                    style="@style/black_large_text"/>

            <TextView
                    android:id="@+id/home_fragment_date_year_and_month"
                    android:text="2014/06"
                    style="@style/black_small_text"/>
        </LinearLayout>

        <ImageView
                android:layout_gravity="center"
                android:padding="10dp"
                android:scaleType="fitCenter"
                android:src="@drawable/divider"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>

        <TextView
                android:layout_gravity="center_vertical"
                android:id="@+id/home_fragment_l0cation"
                android:text="廊坊"
                android:textSize="@dimen/label_text_extreme_large_size"
                style="@style/wrap_content_layout"/>

        <LinearLayout
                android:padding="5dp"
                android:orientation="vertical"
                android:gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

            <LinearLayout
                    android:orientation="horizontal"
                    style="@style/wrap_content_layout">

                <TextView
                        android:id="@+id/home_fragment_temperature"
                        android:text="30度"
                        style="@style/yellow_small_text"/>

                <TextView
                        android:id="@+id/home_fragment_humidity"
                        android:text="52%"
                        android:paddingLeft="5dp"
                        style="@style/yellow_small_text"/>
            </LinearLayout>

            <TextView
                    android:id="@+id/home_fragment_air_quality"
                    android:text="轻度污染"
                    style="@style/blue_small_text"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
